--- a/residence.css
+++ b/residence.css
@@ -18,6 +18,9 @@
   --border-color: hsl(228, 99%, 98%);
   --body-color: #fff;
   --container-color: #fff;
+  --black-color:#000000;
+   --box-shadow: rgba(255, 255, 255, 0.2);
+
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
@@ -128,6 +131,8 @@ body.dark__theme{
   --border-color: hsl(228, 16%, 14%);
   --body-color: hsl(228, 12%, 8%);
   --container-color: hsl(228, 16%, 12%);
+  --black-color:#fff;
+  --box-shadow:rgba(0, 0, 0, 0.2);
 
 }
 
@@ -168,6 +173,7 @@ body.dark__theme{
 .section__title {
   font-size: var(--h2-font-size);
   margin-bottom: 1rem;
+  color: var(--title-color);
 }
 
 .section__title span {
@@ -349,13 +355,15 @@ body.dark__theme{
 /*=============== POPULAR ===============*/
 
 
-.popular__container{
+/* .popular__container{
 
    padding: 1rem 0 5rem;
+   position: relative;
  }
  
  .popular__card{
- 
+
+   position: relative;
    width: 290px;
    background-color: var(--container-color);
    padding: .5rem .5rem 1.5rem ;
@@ -368,6 +376,16 @@ body.dark__theme{
  
    border-radius: 1rem;
    margin-bottom: 1rem;
+   position: absolute;
+   overflow: hidden;
+   transition: 0.5s;
+   
+ }
+
+ .popular__img:hover{
+
+   top: -100px;
+   scale: 0.75;
  }
  
  .popular__data{
@@ -401,11 +419,127 @@ body.dark__theme{
  .popular__card:hover{
  
    box-shadow: 0 12px 16px hsla(228, 66%, 45%, .1);
+ } */
+ 
+
+
+ .popular-container {
+   position: relative;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   margin-top: 80px;
+   gap: 160px 50px;
+ }
+ 
+ .popular-container .custom-card {
+   position: relative;
+   display: flex;
+   justify-content: center;
+   align-items: flex-start;
+   width: 350px;
+   height: 300px;
+   max-width: 100%;
+   padding: 100px 50px;
+   background: var(--body-color);
+   border-radius: 20px;
+   transition: 0.5s;
+   overflow: hidden;
+   box-shadow: 0px 8px 80px 0px var(--black-color);
+
+ }
+ 
+ .popular-container .custom-card:hover {
+   height: 500px;
+ }
+ 
+ .popular-container .custom-card .img-box {
+   position: absolute;
+   top: 20px;
+   width: 300px;
+   height: 220px;
+   background: #333;
+   border-radius: 12px;
+   transition: 0.5s;
+   box-shadow: 0 1px 20px var(--black-color);
+ }
+ 
+ .popular-container .custom-card:hover .img-box {
+   top: 30px;
+   scale: 0.95;
+
+ }
+ 
+ .popular-container .custom-card .img-box img {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   border-radius: 12px;
+   box-shadow: 0 8px 20px var(--body-color);
+
+ }
+ 
+ .popular-container .custom-card .custom-content {
+   position: absolute;
+   top: 252px;
+   width: 100%;
+   height: 35%;
+   padding: 0 30px;
+   text-align: center;
+   overflow: hidden;
+   transition: 0.5s;
+ }
+ 
+ .popular-container .custom-card:hover .custom-content {
+   /* top: 130px; */
+   height: 250px;
+ }
+ 
+ h2 {
+   font-size: 1.5rem;
+   font-weight: 700;
+   color: var(--black-color);
+ }
+
+ .popular-Heading{
+
+   color: var(--title-color);
+   font-size: 1.5rem;
+ }
+ 
+ p {
+   margin-top: 12px;
+   color: var(--text-color-light);
+ }
+
+ #INR{
+
+   color: var(--second-color);
+ }
+ 
+ .read-more{
+   position: relative;
+   top: 15px;
+   display: inline-block;
+   padding: 12px 25px;
+   text-decoration: none;
+   background: var(--first-color);
+   color: var(--body-color);
+   font-weight: 500;
+   border-radius:4px;
+ }
+ 
+ a:hover {
+   opacity: 0.8;
  }
  
  /* Swiper class */
  
- .swiper-button-prev::after,
+ /* .swiper-button-prev::after,
  .swiper-button-next::after{
  
    content: '';
@@ -436,7 +570,7 @@ body.dark__theme{
  
    right: calc(20% - 3rem);
  }
- 
+  */
  
  /*=============== FOOTER ===============*/
 
