--- a/residence.css
+++ b/residence.css
@@ -18,8 +18,8 @@
   --border-color: hsl(228, 99%, 98%);
   --body-color: #fff;
   --container-color: #fff;
-  --black-color:#000000;
-   --box-shadow: rgba(255, 255, 255, 0.2);
+  --black-color:#615f5f;
+   --box-shadow: rgba(255, 149, 5, 0.3);
 
 
   /*========== Font and typography ==========*/
@@ -132,7 +132,7 @@ body.dark__theme{
   --body-color: hsl(228, 12%, 8%);
   --container-color: hsl(228, 16%, 12%);
   --black-color:#fff;
-  --box-shadow:rgba(0, 0, 0, 0.2);
+  --box-shadow:rgba(255, 255, 255, 0.2);
 
 }
 
@@ -430,7 +430,7 @@ body.dark__theme{
    align-items: center;
    flex-wrap: wrap;
    margin-top: 80px;
-   gap: 100px 50px;
+   gap: 100px 80px;
  }
  
  .popular-container .custom-card {
@@ -446,8 +446,7 @@ body.dark__theme{
    border-radius: 20px;
    transition: 0.5s;
    overflow: hidden;
-   box-shadow: 0px 8px 80px 0px var(--black-color);
-
+   box-shadow: 0px 9px 30px var(--box-shadow);
  }
  
  .popular-container .custom-card:hover {
