--- a/residence.css
+++ b/residence.css
@@ -19,7 +19,7 @@
   --body-color: #fff;
   --container-color: #fff;
   --black-color: #615f5f;
-  --box-shadow: rgba(255, 149, 5, 0.3);
+  --box-shadow: rgba(76, 55, 26, 0.3);
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
@@ -316,16 +316,16 @@ body.dark__theme {
   height: 300px;
   max-width: 100%;
   padding: 100px 50px;
-  background: var(--body-color);
+  /* background-color: aqua; */
   border-radius: 20px;
   transition: 0.5s;
   overflow: hidden;
   box-shadow: 0px 9px 30px var(--box-shadow);
 }
 
-.popular-container .custom-card:hover {
+/* .popular-container .custom-card:hover {
   height: 500px;
-}
+} */
 
 .popular-container .custom-card .img-box {
   position: absolute;
@@ -340,7 +340,7 @@ body.dark__theme {
 
 .popular-container .custom-card:hover .img-box {
   top: 30px;
-  scale: 0.95;
+  scale: 0.98;
 }
 
 .popular-container .custom-card .img-box img {
@@ -361,14 +361,14 @@ body.dark__theme {
   height: 35%;
   padding: 0 30px;
   text-align: center;
-  overflow: hidden;
+  /* overflow: hidden; */
   transition: 0.5s;
 }
 
-.popular-container .custom-card:hover .custom-content {
-  /* top: 130px; */
+/* .popular-container .custom-card:hover .custom-content {
+  top: 130px;
   height: 250px;
-}
+} */
 
 h2 {
   font-size: 1.5rem;
